--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "PRINXE-MD",
-  "description": "PRINXE-MD A SUPER WHATSAPP USER BOT",
+  "name": "Karanja-MD",
+  "description": "KARANJA-MD A SUPER WHATSAPP USER BOT",
   "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
   "repository": "https://github.com/PRINCE-GDS/PRINXE-MD",
   
@@ -9,7 +9,7 @@
       "OWNERS": {
       "description": "Put your Number as Owner",
       "required": true,
-      "value": "923092668108;❣️Prince"
+      "value": "254740419256;❣️Prince"
       },
      "MODE": {
       "description": "mode public or private",
@@ -49,7 +49,7 @@
     "BOT_NAME": {
       "description": "Put your BOT a name",
       "required": true,
-      "value": "🎡𝗣𝗥𝗜𝗡𝗫𝗘-𝗠𝗗🎡"
+      "value": "🎡KARANJA-𝗠𝗗🎡"
       },
     "PACK_NAME": {
       "description": "Put your stickers pack name",
@@ -69,7 +69,7 @@
     "STATUSVIEW": {
       "description": "Make it true if you want the bot to auto view status",
       "required": false,
-      "value": "false"
+      "value": "true"
       },
     "Status_Saver": {
       "description": "Make it true if you want the bot to auto save your contacts status",
@@ -89,7 +89,7 @@
     "SESSION_ID": {
       "description": "put your session ID here in the box below",
       "required": true,
-      "value": ""
+      "value": "Prince~Yt4AWCKL#Jyy269za1lYR0C_hIEMVJuCt1dXBgI-v9FZ1VYzSJLA"
     }
     
    
